<resources>
    <string name="app_name">MainComponentsOfAndroid</string>
    <string name="get_contacts">Get Contacts</string>
    <string name="service">Service</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="work_manager">Work manager</string>
    <string name="job_intent_service">Job intent service</string>
    <string name="job_scheduler">Job scheduler</string>
    <string name="intent_service">intent service</string>
    <string name="foreground_service">Foreground service</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="stop">\" Stop\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_contacts">Read Contacts</string>
    <string name="check_phone_charge_level">Узнать уровень заряда телефона</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="fiels_not_empty">Поле не должно быть пустым</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Okay</string>
    <string name="number_contaion_11_digits">Номер должен содрежать 11 цифр</string>
    <string name="number_contain_only_numbers">Номер должен содержать только цифры</string>
    <string name="InvalidForm">InvalidForm</string>
    <string name="tel">tel:</string>
    <string name="add_contacts">add contacts</string>
    <string name="percent">%</string>
    <string name="add_avatar">Add avatar</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="picture_showing_battery_level">Picture showing battery level</string>
    <string name="get_contact_list_from_phonebook">Get contact list from phoneBook</string>
    <string name="start_and_pause_button">Start and pause button</string>
    <string name="phone_call_button">Phone call button</string>
    <string name="reset_button">Reset button</string>
    <string name="no_name">No name</string>
</resources>